--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1",
-    "mongoose": "^5.13.7",
-    "path": "^0.12.7"
+    "express": "4.21.1",
+    "mongoose": "8.8.0",
+    "path": "0.12.7"
   }
 }
