--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/index.js"
-
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "4.21.1",
     "mongoose": "8.8.0",
     "path": "0.12.7"
+  },
+  "devDependencies": {
+    "@types/node": "^22.9.0"
   }
 }
