--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 MONGODB_USER=briannider
 MONGODB_PASS=63yIKJEwu3sRy2cG
 MONGODB_URI=modda.xxr1z.mongodb.net/?retryWrites=true&w=majority&appName=Modda
+PORT=3001
