--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "dotenv": "^16.4.5",
     "express": "4.21.1",
     "mongoose": "8.8.0",
-    "path": "0.12.7"
+    "path": "0.12.7",
+    "cors": "2.8.5"
   },
   "devDependencies": {
     "@types/node": "^22.9.0"
